--- a/cipher.html
+++ b/cipher.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -18,10 +19,11 @@
 	        <a href="cipher.html" class="btn btn-outline-secondary" type="button">Input</a>
 	    </form>
 	</nav>
+	<form id = "box">
     <p>Enter the key:</p>
-    <input type="text" name="key">
+    <input type="text" name="key" id = "key">
     <p>Enter text to cript:</p>
-    <input type="text" name="text">
+    <input type="text" name="text" id = "text">
     <p></p>
     <button id="btn">Try Cipher</button>
     <script type="text/javascript">
@@ -35,6 +37,7 @@
             $("body").append(newElement);
     });
     </script>
+</form>
 </body>
 
 </html>
