--- a/cipher.html
+++ b/cipher.html
@@ -12,32 +12,32 @@
 </head>
 
 <body>
-	<h1 class="text-center">Playfair-Cipher</h1>
-	<nav class="navbar navbar-light bg-light">
-	    <form class="form-inline">
-	        <a href="index.html" class="btn btn-outline-success" type="button">Home</a>
-	        <a href="cipher.html" class="btn btn-outline-secondary" type="button">Input</a>
-	    </form>
-	</nav>
-	<form id = "box">
-    <p>Enter the key:</p>
-    <input type="text" name="key" id = "key">
-    <p>Enter text to cript:</p>
-    <input type="text" name="text" id = "text">
-    <p></p>
-    <button id="btn">Try Cipher</button>
+    <h1 class="text-center">Playfair-Cipher</h1>
+    <nav class="navbar navbar-light bg-light">
+        <form class="form-inline">
+            <a href="index.html" class="btn btn-outline-success" type="button">Home</a>
+            <a href="cipher.html" class="btn btn-outline-secondary" type="button">Input</a>
+        </form>
+    </nav>
+    <div id="box">
+        <p>Enter the key:</p>
+        <input type="text" name="key" id="key">
+        <p>Enter text to cript:</p>
+        <input type="text" name="text" id="text">
+        <p></p>
+        <button id="btn">Try Cipher</button>
+    </div>
     <script type="text/javascript">
     $("#btn").on("click", function() {
-    	$("#output").remove();
-        let keyInput = $("input[name=key]").val(),
-            textInput = $("input[name=text]").val(),
+        $("#output").remove();
+        let keyInput = $("#key").val(),
+            textInput = $("#text").val(),
             output = encript(keyInput, textInput),
+            newElement = "<div id='output'><p>The cripted text is : </p><p>" + output + "</p></div>";
             
-            newElement = "<div id='output'><p>The cripted text is : </p><p>"+output+"</p></div>";
-            $("body").append(newElement);
+        $("#btn").after(newElement);
     });
     </script>
-</form>
 </body>
 
 </html>
